# TetrisClone

./: .gitignore  CMakeLists.txt  README.md
include/: BoolMat.hpp  game.hpp  main.hpp  shaders.hpp
include/GameElements/: Field.hpp  Tetromino.hpp
include/glad/: glad.h
resources/shaders/: fragment.glsl  vertex.glsl
src/: BoolMat.cpp  game.cpp  glad.c  main.cpp  shaders.cpp
src/GameElements/: Field.cpp  Tetromino.cpp
